[tool.poetry]
name = "stacklift"
version = "0.1.0"
description = "CloudFormation stack management tool"
authors = ["Yoichi Imai <imai@synclogue.com>"]

[tool.poetry.scripts]
stacklift = "stacklift.cli:run"

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.14.5"
pyyaml = "^5.3.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
